Fix post overflow

--- a/app/styles/admin.css
+++ b/app/styles/admin.css
@@ -23,7 +23,6 @@
 
 div { 
   overflow: visible; 
-  white-space: nowrap; 
 }
 
 ul {
